--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <input type="checkbox" class="btn-check" id="btncheck7" name="atcoder.jp" autocomplete="off">
         <label class="cbox btn btn-outline-success btn-lg" for="btncheck7">Atcoder</label>
 
-        <input type="checkbox" class="btn-check" id="btncheck2" name="codechef.com" autocomplete="off" checked>
+        <input type="checkbox" class="btn-check" id="btncheck2" name="codechef.com" autocomplete="off">
         <label class="cbox btn btn-outline-success btn-lg" for="btncheck2">CodeChef</label>
 
-        <input type="checkbox" class="btn-check" id="btncheck1" name="codeforces.com" autocomplete="off" checked>
+        <input type="checkbox" class="btn-check" id="btncheck1" name="codeforces.com" autocomplete="off">
         <label class="cbox btn btn-outline-success btn-lg" for="btncheck1">Codeforces</label>
 
         <input type="checkbox" class="btn-check" id="btncheck3" name="geeksforgeeks.org" autocomplete="off">
